--- a/index.html
+++ b/index.html
@@ -1,216 +1,231 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Fancy Pony – Artwork Submission</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Fancy Pony — Artwork Submission</title>
 <style>
-  :root { --bg:#fafafa; --card:#fff; --text:#111; --muted:#6b7280; --ok:#16a34a; --err:#b91c1c; --brand:#2563eb;}
-  body{margin:24px;font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:var(--text)}
-  h1{font-size:clamp(24px,4vw,36px);margin:.25rem 0 1rem}
-  .wrap{max-width:980px;margin-inline:auto}
-  .card{background:var(--card);border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,.06);padding:16px 18px}
-  label{font-weight:600;display:block;margin:.5rem 0 .25rem}
-  input[type="text"],input[type="email"],input[type="file"],textarea{
-    width:100%;padding:.65rem .7rem;border:1px solid #d1d5db;border-radius:8px;font-size:16px;background:#f8fafc}
-  .help{color:var(--muted);font-size:.9rem;margin-top:.25rem}
+  :root { color-scheme: light; --brand:#2563eb; --ok:#16a34a; --err:#b91c1c; }
+
+  /* ==== 背景設定 ==== */
+  body{
+    font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    margin:24px;
+    background-color:#fafafa;
+    background-image:url('https://i.postimg.cc/jSmGH445/Pony.png');
+    background-repeat:repeat-y;
+    background-size:100% auto;
+    background-position:top center;
+    color:#111;
+  }
+
+  h1{font-size:clamp(26px,3.8vw,36px);margin:0 0 10px}
+  .muted{color:#6b7280}
+  .wrap{display:grid;gap:18px;max-width:980px;margin:auto}
+  .card{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:18px;box-shadow:0 1px 2px rgba(0,0,0,.03)}
+  label{font-weight:600;display:block;margin:.5rem 0 .35rem}
+  input[type="text"],input[type="email"],input[type="file"]{width:100%;padding:.6rem .7rem;border:1px solid #d1d5db;border-radius:8px;font-size:16px;background:#fff}
   .row{display:grid;grid-template-columns:1fr 1fr;gap:14px}
-  @media (max-width:720px){.row{grid-template-columns:1fr}}
-  .consent{display:flex;gap:.6rem;align-items:flex-start;margin:.6rem 0}
-  .btn{background:var(--brand);color:#fff;border:0;border-radius:10px;padding:.75rem 1.1rem;font-weight:700;cursor:pointer}
-  .btn[disabled]{opacity:.6;cursor:not-allowed}
-  .status{margin:.75rem 0}
-  .ok{background:#ecfdf5;border:1px solid #86efac;color:#065f46;padding:.6rem .75rem;border-radius:10px;display:inline-block}
-  .err{background:#fef2f2;border:1px solid #fecaca;color:var(--err);padding:.6rem .75rem;border-radius:10px;display:inline-block}
-  .count{font-weight:700}
-  /* spinner in button */
-  .spinner{inline-size:1em;block-size:1em;border:2px solid #fff;border-right-color:transparent;border-radius:50%;
-           display:inline-block;vertical-align:-.2em;animation:spin .8s linear infinite;margin-right:.5rem}
-  @keyframes spin{to{transform:rotate(360deg)}}
-  /* Gallery */
-  .gallery{margin-top:18px;display:grid;gap:12px;grid-template-columns:repeat( auto-fill, minmax(180px,1fr) );}
-  figure{margin:0;background:#fff;border:1px solid #e5e7eb;border-radius:12px;overflow:hidden;display:flex;flex-direction:column}
-  figure img{aspect-ratio:1/1;width:100%;object-fit:cover;background:#f3f4f6}
-  figcaption{padding:.55rem .7rem;font-size:.85rem;color:#374151;border-top:1px solid #e5e7eb}
-  .muted{color:var(--muted)}
+  .checkbox{display:flex;gap:.55rem;align-items:flex-start;margin-top:.75rem}
+  .checkbox input{margin-top:4px}
+  .note{font-size:13px;color:#6b7280}
+  .btn{display:inline-flex;gap:.5rem;align-items:center;margin-top:14px;padding:.7rem 1.1rem;border-radius:10px;border:1px solid #1f55c3;background:var(--brand);color:#fff;font-weight:700;cursor:pointer}
+  .btn[disabled]{opacity:.55;cursor:not-allowed}
+  .spinner{width:16px;height:16px;border:2px solid #ffffff80;border-top-color:#fff;border-radius:50%;animation:spin .8s linear infinite}
+  @keyframes spin{to{transform:rotate(1turn)}}
+  .status{min-height:22px;margin-top:10px}
+  .ok{background:#f0fff4;border:1px solid #c8f5d3;color:#065f46;border-radius:8px;padding:8px 10px;display:inline-block}
+  .err{background:#fff1f2;border:1px solid #fecaca;color:#991b1b;border-radius:8px;padding:8px 10px;display:inline-block}
+  .counter{font-weight:700}
+  .gallery{display:grid;grid-template-columns:repeat(auto-fill,minmax(160px,1fr));gap:12px;margin-top:10px}
+  .thumb{background:#fff;border:1px solid #e5e7eb;border-radius:10px;overflow:hidden}
+  .thumb img{display:block;width:100%;height:140px;object-fit:cover}
+  .thumb .cap{padding:8px;font-size:13px;color:#374151;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
+  .hl{background:#ffec99;transition:background .9s}
 </style>
 </head>
 <body>
-<div class="wrap">
-  <h1>Fancy Pony – Artwork Submission</h1>
+  <div class="wrap">
 
-  <p class="muted">
-    Total drawings collected: <span id="total" class="count">…</span>
-  </p>
+    <header>
+      <h1>Fancy Pony — Artwork Submission</h1>
+      <div class="muted">Total drawings collected: <span id="total" class="counter">Loading…</span></div>
+    </header>
 
-  <div class="card" style="margin-bottom:18px">
-    <form id="ponyForm" novalidate>
-      <div class="row">
-        <div>
-          <label for="name">Your Name *</label>
-          <input id="name" type="text" required>
+    <section class="card">
+      <form id="ponyForm" novalidate>
+        <div class="row">
+          <div>
+            <label for="name">Your Name *</label>
+            <input id="name" name="name" type="text" required />
+          </div>
+          <div>
+            <label for="email">Your Email *</label>
+            <input id="email" name="email" type="email" required />
+          </div>
         </div>
-        <div>
-          <label for="email">Your Email *</label>
-          <input id="email" type="email" required>
+
+        <label for="title">Pony Name *</label>
+        <input id="title" name="title" type="text" required />
+
+        <label for="file">Upload File *</label>
+        <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+        <div class="note">File size must be between <b>1 MB</b> and <b>5 MB</b>. Recommended: <b>150–300 ppi</b> (Letter size scan typically &gt; 1 MB).</div>
+
+        <div class="checkbox">
+          <input id="consent" name="consent" type="checkbox" required />
+          <label for="consent" class="muted" style="margin:0;font-weight:500">
+            I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.
+          </label>
         </div>
-      </div>
 
-      <div class="row">
-        <div>
-          <label for="title">Pony Name *</label>
-          <input id="title" type="text" required>
-        </div>
-        <div>
-          <label for="file">Upload File *</label>
-          <input id="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required>
-          <div class="help">File size must be between <b>1 MB</b> and <b>3 MB</b>. Recommended: 150–300 ppi, letter size (should be &gt;1 MB).</div>
-        </div>
-      </div>
+        <button id="submitBtn" class="btn" type="submit">
+          <span class="txt">Upload</span>
+        </button>
 
-      <label for="desc">Description (optional)</label>
-      <textarea id="desc" rows="3" placeholder="Tell us about your pony…"></textarea>
+        <div id="status" class="status" aria-live="polite"></div>
+      </form>
+    </section>
 
-      <div class="consent">
-        <input id="consent" type="checkbox" required>
-        <label for="consent" style="font-weight:500">
-          I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.
-        </label>
-      </div>
+    <section class="card">
+      <h2 style="margin:0 0 8px">Gallery</h2>
+      <div id="gallery" class="gallery" aria-live="polite"></div>
+    </section>
 
-      <button id="submitBtn" class="btn" type="submit">Upload</button>
-      <div id="status" class="status"></div>
-    </form>
   </div>
 
-  <h2 style="margin:.5rem 0">Gallery</h2>
-  <div id="gallery" class="gallery"></div>
-</div>
-
 <script>
-  // UPDATE this if you redeploy:
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyS8EeAEoACk6HqauFS1y44kI7j20xmuTmIJPucYmtnCBBBSiQu_uSZ8vJGftIaHueFvA/exec';
-
   const $ = id => document.getElementById(id);
-  const btn = $('submitBtn'), statusEl = $('status'), totalEl = $('total'), galleryEl = $('gallery');
+  const totalEl = $('total'), statusEl = $('status'), btn = $('submitBtn');
+  const MIN = 1 * 1024 * 1024;          
+  const MAX = 5 * 1024 * 1024;          
+  const GALLERY_LIMIT = 24;
 
-  // ---------- helpers ----------
-  function setBusy(isBusy){
-    if(isBusy){
-      btn.disabled = true;
-      btn.innerHTML = '<span class="spinner"></span>Uploading…';
-    }else{
-      btn.disabled = false;
-      btn.textContent = 'Upload';
+  function setBusy(on){
+    if (on){
+      btn.setAttribute('disabled','disabled');
+      btn.innerHTML = '<span class="spinner" role="progressbar"></span><span>Uploading…</span>';
+    } else {
+      btn.removeAttribute('disabled');
+      btn.innerHTML = '<span class="txt">Upload</span>';
     }
   }
+  function ok(msg){ statusEl.innerHTML = `<span class="ok">${msg}</span>`; }
+  function err(msg){ statusEl.innerHTML = `<span class="err">${msg}</span>`; }
 
-  function humanErr(msg){ statusEl.innerHTML = `<span class="err">${msg}</span>`; }
-  function humanOk(msg){ statusEl.innerHTML = `<span class="ok">${msg}</span>`; }
+  async function refreshTotal(){
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
+      const j = await r.json();
+      if (j.ok){
+        totalEl.textContent = j.count ?? 0;
+        totalEl.classList.add('hl'); setTimeout(()=>totalEl.classList.remove('hl'), 900);
+      } else totalEl.textContent = 'Error';
+    }catch{ totalEl.textContent = 'Error'; }
+  }
+
+  async function refreshGallery(){
+    try{
+      const r = await fetch(SCRIPT_URL + '?action=list&limit=' + GALLERY_LIMIT, {cache:'no-store'});
+      const j = await r.json();
+      const box = $('gallery');
+      if (!j.ok || !Array.isArray(j.items)){ box.innerHTML = '<div class="muted">No items yet.</div>'; return; }
+      const imgs = j.items.filter(it => (it.mimeType||'').startsWith('image/'));
+      if (!imgs.length){ box.innerHTML = '<div class="muted">No images yet.</div>'; return; }
+      box.innerHTML = imgs.map(it => {
+        const cap = `${(it.title||'Untitled')} by ${(it.name||'Anonymous')}`;
+        const url = it.fileUrl || '';
+        return `
+          <figure class="thumb">
+            <a href="${url}" target="_blank" rel="noopener">
+              <img src="${url}" alt="${cap}">
+            </a>
+            <figcaption class="cap" title="${cap}">${cap}</figcaption>
+          </figure>`;
+      }).join('');
+    }catch(e){
+      $('gallery').innerHTML = '<div class="muted">Failed to load gallery.</div>';
+    }
+  }
 
   function toBase64(file){
     return new Promise((resolve,reject)=>{
       const fr = new FileReader();
       fr.onload = () => {
-        const s = String(fr.result||''); const i = s.indexOf('base64,');
-        resolve(i>=0 ? s.slice(i+7) : s);
+        const s = String(fr.result||'');
+        const i = s.indexOf('base64,');
+        resolve(i >= 0 ? s.slice(i+7) : s);
       };
-      fr.onerror = () => reject(fr.error||new Error('Read error'));
+      fr.onerror = () => reject(fr.error || new Error('File read error'));
       fr.readAsDataURL(file);
     });
   }
 
-  async function refreshCount(){
-    try{
-      const r = await fetch(SCRIPT_URL + '?action=count', {cache:'no-store'});
-      const j = await r.json();
-      totalEl.textContent = j && j.ok ? (j.count ?? 0) : '—';
-    }catch{ totalEl.textContent = '—'; }
+  async function uploadMultipart(data){
+    const fd = new FormData();
+    fd.append('name', data.name);
+    fd.append('email', data.email);
+    fd.append('title', data.title);
+    fd.append('consent', data.consent ? 'true' : 'false');
+    fd.append('file', data.file, data.file.name);
+    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
+    return r.json();
   }
 
-  async function refreshGallery(){
-    try{
-      const r = await fetch(SCRIPT_URL + '?action=list', {cache:'no-store'});
-      const j = await r.json();
-      if(!(j && j.ok && Array.isArray(j.items))) return;
-      galleryEl.innerHTML = '';
-      j.items.forEach(it=>{
-        if(!it.fileUrl) return;
-        const name = (it.name || '').trim();
-        const title = (it.title || '').trim();
-        const cap = [title && `<b>${escapeHTML(title)}</b>`, name && `by ${escapeHTML(name)}`].filter(Boolean).join(' ');
-        const fig = document.createElement('figure');
-        fig.innerHTML = `
-          <img loading="lazy" src="${it.fileUrl.replace('view?usp=drivesdk','preview')}" alt="${escapeHTML(cap || 'Pony')}">
-          <figcaption>${cap || '&nbsp;'}</figcaption>`;
-        galleryEl.appendChild(fig);
-      });
-    }catch(e){
-      // silent
-    }
+  async function uploadBase64(data){
+    const b64 = await toBase64(data.file);
+    const fd = new FormData();
+    fd.append('name', data.name);
+    fd.append('email', data.email);
+    fd.append('title', data.title);
+    fd.append('consent', data.consent ? 'true' : 'false');
+    fd.append('filebase64', b64);
+    fd.append('mimetype', data.file.type || 'application/octet-stream');
+    fd.append('filename', data.file.name || 'upload.bin');
+    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
+    return r.json();
   }
 
-  function escapeHTML(s){ return String(s||'').replace(/[&<>"']/g, m => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m])); }
-
-  // ---------- submit ----------
   $('ponyForm').addEventListener('submit', async (e)=>{
     e.preventDefault();
     statusEl.textContent = '';
-
     const name = $('name').value.trim();
     const email = $('email').value.trim();
     const title = $('title').value.trim();
-    const desc  = $('desc').value.trim();
     const consent = $('consent').checked;
     const file = $('file').files[0];
-
-    if(!name || !email || !title || !file || !consent){
-      return humanErr('Please complete all required fields and check the consent box.');
+    if (!name || !email || !title || !consent || !file){
+      err('Please complete all required fields and consent.');
+      return;
     }
-
-    // size check 1–3 MB
-    const min = 1 * 1024 * 1024, max = 3 * 1024 * 1024;
-    if(file.size < min || file.size > max){
-      return humanErr('File size must be between 1MB and 3MB.');
+    if (file.size < MIN || file.size > MAX){
+      err('File must be between 1 MB and 5 MB.');
+      return;
     }
-
+    setBusy(true);
     try{
-      setBusy(true);
-
-      // Use base64 (most reliable across hosts)
-      const b64 = await toBase64(file);
-      const fd = new FormData();
-      fd.append('name', name);
-      fd.append('email', email);
-      fd.append('title', title);
-      fd.append('description', desc);
-      fd.append('consent', consent ? 'true' : 'false');
-      fd.append('filebase64', b64);
-      fd.append('mimetype', file.type || 'application/octet-stream');
-      fd.append('filename', file.name || 'upload.bin');
-
-      const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
-      const txt = await r.text();
-      let data = null; try{ data = JSON.parse(txt); }catch{}
-      if(data && data.ok){
-        humanOk('Upload successful!');
-        e.target.reset();
-        $('name').focus();
-        await refreshCount();
-        await refreshGallery();
-      }else{
-        humanErr('Upload failed. ' + (data?.error || 'Please try again.'));
-        console.error('server:', data || txt);
+      let res = await uploadMultipart({name,email,title,consent,file});
+      if (!res.ok && String(res.error||'').toLowerCase().includes('no file uploaded')){
+        res = await uploadBase64({name,email,title,consent,file});
       }
-    }catch(err){
-      humanErr('Network error: ' + err.message);
+      if (res.ok){
+        const link = res.fileUrl ? ` <a href="${res.fileUrl}" target="_blank" rel="noopener">Open</a>` : '';
+        ok('Upload successful!' + link);
+        e.target.reset();
+        await refreshTotal();
+        await refreshGallery();
+      } else {
+        err('Upload failed: ' + (res.error || 'Unknown error'));
+      }
+    }catch(ex){
+      err(ex.message || 'Network error');
     }finally{
       setBusy(false);
     }
   });
 
-  // init
-  refreshCount();
+  refreshTotal();
   refreshGallery();
 </script>
 </body>
